--- a/about.html
+++ b/about.html
@@ -12,24 +12,22 @@
         <nav class="cabecalho__menu">
         <a class="cabecalho__menu__link" href="index.html">Home</a>
         <a class="cabecalho__menu__link" href="about.html">About me</a>
+        <a class="cabecalho__menu__link" href="technologies.html">Technologies</a>
     </nav>
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">About me</h1>
-            <p class="apresentacao__conteudo__texto">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
-                atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident,
-                similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
+            <p class="apresentacao__conteudo__texto"> Technology course in Digital Games at Unisinos, located in the city of São Leopoldo in Rio Grande do Sul, Brazil.
+                 At Unisinos was where I had my first contact with programming, where I learned to program using C++ with graphic libraries like OpenGL. Furthermore, the course teaches you in depth how to use the Unity game engine, programming in C#.
+                 During the course I also learned in a more superficial way how to develop games using Python
+            </p>
 
-            <p class="apresentacao__conteudo__texto"> Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est
-                eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas
-                assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum
-                necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum
-                rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut
-                perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat
-                cupidatat non.</p>
+            <p class="apresentacao__conteudo__texto"> Professionally, I worked using Unity to develop an application that aims to sell glasses and similar products over the internet.
+                I also worked on an internship where the objective was to develop native applications for iOS, using Swift. In this opportunity I learned deeply about technology and worked with the company on some clients.
+                Today I'm working as an intern at the company Vortigo, here I'm learning how to develop both the backend and frontend of hybrid applications. </p>
         </section>
-        <img src="./assets/imagem.png" alt="Foto da Joana Santos programando">
+        <img class="apresentacao__imagem" src="./assets/FotoSelfie.jpeg" alt="Foto de Raul Medeiros sorrindo">
     </main>
 
     <footer class="rodape">
