--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <nav class="cabecalho__menu">
         <a class="cabecalho__menu__link" href="index.html">Home</a>
         <a class="cabecalho__menu__link" href="about.html">About me</a>
+        <a class="cabecalho__menu__link" href="technologies.html">Technologies</a>
     </nav>
     </header>
     <main class="apresentacao">
@@ -26,18 +27,18 @@
             <div class="apresentacao__links"> 
                 <h2 class="apresentacao__links__subtitulo">Access my networks</h2>
 
-                <a class="apresentacao__links__link" href="https://github.com/RaulMdrs">
+                <a class="apresentacao__links__navegacao" href="https://github.com/RaulMdrs">
                     <img src="Assets/github.png">
                     Github
                 </a>
-                <a class="apresentacao__links__link" href="https://www.linkedin.com/in/raulmdrs/">
+                <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/raulmdrs/">
                     <img src="Assets/linkedin.png">
                     Linkedin
                 </a>
             </div> 
             
         </section>
-            <img class="apresentacao__imagem" src="/Assets/FotoSelfie.jpeg" alt="Foto de Raul Medeiros sorrindo descontraído" height="700px">
+            <img class="apresentacao__imagem" src="/Assets/FotoSelfie.jpeg" alt="Foto de Raul Medeiros sorrindo descontraído">
     </main>
     <footer class="rodape">
         <p>Develop by Raul Medeiros</p>
