Remove technologies from nav header

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <nav class="cabecalho__menu">
         <a class="cabecalho__menu__link" href="index.html">Home</a>
         <a class="cabecalho__menu__link" href="about.html">About me</a>
-        <a class="cabecalho__menu__link" href="technologies.html">Technologies</a>
+        <!-- <a class="cabecalho__menu__link" href="technologies.html">Technologies</a> -->
     </nav>
     </header>
     <main class="apresentacao">
