Photo at about me updated

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                 I also worked on an internship where the objective was to develop native applications for iOS, using Swift. In this opportunity I learned deeply about technology and worked with the company on some clients.
                 Today I'm working as an intern at the company Vortigo, here I'm learning how to develop both the backend and frontend of hybrid applications. </p>
         </section>
-        <img class="apresentacao__imagem" src="./assets/FotoSelfie.jpeg" alt="Foto de Raul Medeiros sorrindo">
+        <img class="apresentacao__imagem" src="/Assets/FotoSelfie.jpeg" alt="Foto de Raul Medeiros sorrindo descontraído">
     </main>
 
     <footer class="rodape">
